# asyncgate

./: .dockerignore  .env.example  .gitignore  AsyncGate Spec.txt  CODE_REVIEW_1.md  DEVELOPMENT.md  Dockerfile  README.md  REALIGNMENT_PROGRESS.md  SESSION_SUMMARY.md  SYSTEM_BOUNDARY.md  T0_CORRECTIONS.md  clarifications_temp.txt  commit_msg.txt  deploy-fly.sh  docker-compose.yml  fly.toml  pyproject.toml  run_local.ps1  run_local.sh  test_deployment.sh  🔎 Key Findings.txt
.claude/: ALL_COMPLETE.md  ALL_COMPLETE_VERIFIED.md  HEXY_REFINEMENTS.md  P0_COMPLETE.md  PRIORITY_FIXES.md  PUNCHLIST_PROGRESS.md  README.md  REALIGNMENT_PROGRESS.md  SECURITY_AUDIT.md  SPEC_ALIGNMENT.md  TEST_SPECIFICATIONS.md  commit_msg.txt  spec_update_commit.txt  tier2_commit.txt  tier3_commit.txt  tier4_commit.txt  tier5_6_commit.txt
alembic/: env.py
docs/: ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPARISON.md  FLY_OPERATIONS.md  INSTANCE_UNIQUENESS.md  P02_ATOMIC_TRANSACTIONS.md  P03_P04_MIGRATION.md  P11_P12_RENEWAL_LIMITS_TIMEZONE.md  P1_INTEGRATION_GUIDE.md  RECEIPT_PATTERNS.md  SECURITY_HARDENING.md
k8s/: README.md
migrations/: 001_add_parents_gin_index.sql  002_add_lease_renewal_tracking.sql  003_backfill_principal_ai.sql  README.md
scripts/: golden_path.py
tests/: conftest.py  test_p01_batch_termination.py  test_p02_atomic_transactions.py  test_p03_p04_security_config.py  test_p05_hash_parents.py  test_p11_lease_renewal_limits.py  test_p12_timezone_aware.py  test_p12_timezone_aware_datetimes.py  test_p13_termination_invariants.py  test_p14_running_state.py  (+3 more)
(+67 files in other folders)
